Minor css fix - on mobile, when the header nav is open on top of material tabs

--- a/client/src/app/shared/ui/layout/layout.component.scss
+++ b/client/src/app/shared/ui/layout/layout.component.scss
@@ -14,7 +14,7 @@
     grid-area: header;
     position: sticky;
     top: 0;
-    z-index: 2;
+    z-index: 3;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.12);
     background-color: #fff;
   }
